k8s/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: f1-goat-determiner-ingress
spec:
  tls:
    - hosts:
        - f1goatdeterminer.mooo.com
      secretName: f1-goat-determiner-tls-prod
  rules:
    - host: f1goatdeterminer.mooo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
